blue-deploy.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-blue
  namespace: 241104-project
spec:
  selector:
    color: blue
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-blue
  namespace: 241104-project
spec:
  selector:
    matchLabels:
      color: blue
  template:
    metadata:
      labels:
        color: blue
    spec:
      containers:
      - name: ctn-blue
        image: dododong478/keduitlab:blue
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: hubsec
