green-deploy.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-green
  namespace: 241104-project
spec:
  selector:
    color: green
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-green
  namespace: 241104-project
spec:
  selector:
    matchLabels:
      color: green
  template:
    metadata:
      labels:
        color: green
    spec:
      containers:
      - name: ctn-green
        image: dododong478/keduitlab:green
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: hubsec
