main-deploy.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-main
  namespace: 241104-project
spec:
  selector:
    app: main
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-main
  namespace: 241104-project
spec:
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: ctn-main
        image: dododong478/portal:main
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: hubsec
