red-deploy.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-red
  namespace: 241104-project
spec:
  selector:
    color: red
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-red
  namespace: 241104-project
spec:
  selector:
    matchLabels:
      color: red
  template:
    metadata:
      labels:
        color: red
    spec:
      containers:
      - name: ctn-red
        image: dododong478/keduitlab:red
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: hubsec
